static/css/diello.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');

html, body {
    margin              : 0;
    padding             : 0;
    font-family         : Nunito;
    font-size           : 18px;
    color               : #000;
    line-height         : 200%;
    background-color    : #fff;
    width               : 100vw;
    max-width           : 100vw;
    overflow-x          : hidden;
}

h1 {
    font-family         : Nunito;
    font-size           : 30px;
}

h3 {
    margin      : 0;
    padding     : 0;
    font-family : Nunito;
    font-size   : 20px;
    color: #579e18;
}

a {
    color           : #000;
}

img {
    max-width   : 480px;
}

h1 > a {
    color                   : #579e18;
    text-decoration         : none; 
}

a:hover {
    color                   : #63c210;
}

h2 > a {
    color                   : #000;
    text-decoration         : none;
}

h3 > a {
    color                   : #579e18;
    text-decoration         : none;
}

.em {
    font-size   : 18px;
} 

footer {
    display         : inline-flex;
    justify-content : center;
    padding         : 30px 0;
    width           : 100%;
    font-family     : Nunito;
    font-size       : 18px;
    color           : #000;
}


.flex-column {
    display         : -webkit-flex;
    display         : flex;
    flex-direction  : row;
    flex-wrap       : nowrap;
    justify-content : center;
}

.ads {
    display         : -webkit-flex;
    display         : flex;
    flex-direction  : row;
    flex-wrap       : nowrap;
    justify-content : center;
    align-items     : flex-start;
    padding         : 120px 60px;
}

.home {
    flex-basis  : 60%;
}

.logo {
    padding     : 20px 0 10px;
}

.navigation {
    display         : -webkit-flex;
    display         : flex;
    flex-direction  : row;
    flex-wrap       : nowrap;
    justify-content : flex-end;
    margin          : 0 0 50px;
    padding         : 0;
    font-size       : 20px;
    border-bottom   : 1px solid #333;
    height          : 38px;
}

.navigation > a {
    display         : inline-flex;
    margin          : 0;
    padding         : 0 20px;
    height          : 100%;
    color           : #000;
    text-decoration : none;
}

.navigation > a:hover {
    border-bottom   : 3px solid #63c210;
}

.navigation > .current {
    border-bottom   : 3px solid #579e18;
}

.less {
    color       : #666;
    font-size   : 16px;
}
.pages {
    padding     : 30px 0 10px;
    font-size   : 18px;
}
.pages > a {
    color           : #63c210;
}

.pagelink {
    color       : #666;
}

.pagelink:hover {
    color       : #579e18;
}

.line-dotted {
    margin          : 30px 0 10px;
    width           : 100%;
    height          : 1px;
    border-bottom   : 1px dotted #333;
}

.green {
    color: #579e18;
}

.green-link {
    text-decoration: none;
}

.flex-left {
    justify-content: end; 
    display: flex;
    padding-bottom: 1em;
}

.translation-note {
    cursor: pointer;
    display:inline;
    text-decoration: underline;
    text-decoration-style: dashed;
    text-decoration-color: #000;
}

.translation-note:hover {
    color: #579e18;
}

/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
    -webkit-animation-name: fadeIn; /* Fade in the background */
    -webkit-animation-duration: 0.4s;
    animation-name: fadeIn;
    animation-duration: 0.4s
  }
  
  /* Modal Content */
.modal-content {
    position: fixed;
    bottom: 0;
    background-color: #fff;
    border-top: 3px solid #63c210;
    width: 100%;
    -webkit-animation-name: slideIn;
    -webkit-animation-duration: 0.4s;
    animation-name: slideIn;
    animation-duration: 0.4s;
}

/* The Close Button */
.close {
    color: white;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: #fff;
    text-decoration: none;
    cursor: pointer;
}

.modal-header {
    padding: 20px 20px 6px 20px;
}

.modal-body {padding: 2px 20px 20px 20px;}

/* Add Animation */
@-webkit-keyframes slideIn {
    from {bottom: -300px; opacity: 0} 
    to {bottom: 0; opacity: 1}
}

@keyframes slideIn {
    from {bottom: -300px; opacity: 0}
    to {bottom: 0; opacity: 1}
}

@-webkit-keyframes fadeIn {
    from {opacity: 0} 
    to {opacity: 1}
}

@keyframes fadeIn {
    from {opacity: 0} 
    to {opacity: 1}
}

.paragraph {
    margin-bottom: 18px;
    margin-top: 18px;
}

/******************highlight.js override*************/
.hljs {
    background          : rgba(255, 255, 255, 0.2);
    width               : 800px;
    color               : #ccc;
    font-family         : Nunito;
    border-radius       : 16px;
}

.dark-toggler {
    color: #fff;
    background-color: #666;;
    width: 2.5em;
    height: 2.5em;
    padding: 0.5em;
    border-radius:99px;
    position: fixed;
    bottom: 1em;
    right: 1em;
    cursor: pointer;
}

.dark-toggler:hover {
    background-color: #579e18;
}

/*Dark theme CSS*/
html, body.dark-theme {
    margin              : 0;
    padding             : 0;
    font-family         : Nunito;
    font-size           : 18px;
    color               : #ccc;
    line-height         : 200%;
    background-color    : #000;
    width               : 100vw;
    max-width           : 100vw;
    overflow-x          : hidden;
}

body.dark-theme h3 {
    margin      : 0;
    padding     : 0;
    font-family : Nunito;
    font-size   : 20px;
    color: #63c210;
}

body.dark-theme a {
    color           : #fff;
}

body.dark-theme h1 > a {
    color                   : #63c210;
    text-decoration         : none; 
}
/* ... */

